examples/pos/mutualdependent.effekt
interface Console { def log(): Unit }
interface Time { def now(): Unit }

def mymodule { c: Console } { t : Time } {

  def even { f : () => Unit } : () => Unit at {c, f, t} {
    c.log();
    box { () => (unbox odd { () => f() })() }
  }

  def odd { g : () => Unit } : () => Unit at {c, g, t} {
    t.now();
    box { () => (unbox even { () => g() })() }
  }

  return ()
}